syntax = "proto3";

option go_package = "genproto/dashboardpb";

service DashboardService{
    rpc GetDashboardInfo(GetDashboardInfoReq) returns (GetDashboardInfoResp){}
}

message Dashboard{
    string total = 1; //jami
    int32 sold_out = 2; //sotildi
    int32 add_debt = 3; // qarz berildi
    int32 given_debt = 4; // qarzni berishdi
    int32 total_client = 5; //jami client
    int64 profit = 6; //foyda
    int64 body_price = 7; //tan narxi
    int64 paid_debt = 8; //to'langan qarz
    string created_at = 9;
    string updated_at = 10;
    int64 deleted_at = 11;
}

message GetDashboardInfoReq{}
message GetDashboardInfoResp{
    bool status = 1;
    string message = 2;
    Dashboard Dashboard = 3;
}